[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
scanf = "1.2.1"

[[bin]]
name = "day_01_1"
path = "src/day_01_1/main.rs"

[[bin]]
name = "day_01_2"
path = "src/day_01_2/main.rs"

[[bin]]
name = "day_02_1"
path = "src/day_02_1/main.rs"

[[bin]]
name = "day_02_2"
path = "src/day_02_2/main.rs"

[[bin]]
name = "day_03_1"
path = "src/day_03_1/main.rs"

[[bin]]
name = "day_03_2"
path = "src/day_03_2/main.rs"
