[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.16.0"
regex = "1.11.1"
scanf = "1.2.1"
threadpool = "1.8.1"

[[bin]]
name = "day_01_1"
path = "src/day_01_1/main.rs"

[[bin]]
name = "day_01_2"
path = "src/day_01_2/main.rs"

[[bin]]
name = "day_02_1"
path = "src/day_02_1/main.rs"

[[bin]]
name = "day_02_2"
path = "src/day_02_2/main.rs"

[[bin]]
name = "day_03_1"
path = "src/day_03_1/main.rs"

[[bin]]
name = "day_03_2"
path = "src/day_03_2/main.rs"

[[bin]]
name = "day_04_1"
path = "src/day_04_1/main.rs"

[[bin]]
name = "day_04_2"
path = "src/day_04_2/main.rs"

[[bin]]
name = "day_05_1"
path = "src/day_05_1/main.rs"

[[bin]]
name = "day_05_2"
path = "src/day_05_2/main.rs"

[[bin]]
name = "day_06_1"
path = "src/day_06_1/main.rs"

[[bin]]
name = "day_06_2"
path = "src/day_06_2/main.rs"

[[bin]]
name = "day_07_1"
path = "src/day_07_1/main.rs"

[[bin]]
name = "day_07_2"
path = "src/day_07_2/main.rs"

[[bin]]
name = "day_08_1"
path = "src/day_08_1/main.rs"

[[bin]]
name = "day_08_2"
path = "src/day_08_2/main.rs"

[[bin]]
name = "day_09_1"
path = "src/day_09_1/main.rs"

[[bin]]
name = "day_09_2"
path = "src/day_09_2/main.rs"

[[bin]]
name = "day_10_1"
path = "src/day_10_1/main.rs"

[[bin]]
name = "day_10_2"
path = "src/day_10_2/main.rs"

[[bin]]
name = "day_11_1"
path = "src/day_11_1/main.rs"

[[bin]]
name = "day_11_2"
path = "src/day_11_2/main.rs"

[[bin]]
name = "day_12_1"
path = "src/day_12_1/main.rs"

[[bin]]
name = "day_12_2"
path = "src/day_12_2/main.rs"

[[bin]]
name = "day_13_1"
path = "src/day_13_1/main.rs"

[[bin]]
name = "day_13_2"
path = "src/day_13_2/main.rs"

[[bin]]
name = "day_14_1"
path = "src/day_14_1/main.rs"

[[bin]]
name = "day_14_2"
path = "src/day_14_2/main.rs"

[[bin]]
name = "day_15_1"
path = "src/day_15_1/main.rs"

[[bin]]
name = "day_15_2"
path = "src/day_15_2/main.rs"

[[bin]]
name = "day_16_1"
path = "src/day_16_1/main.rs"

[[bin]]
name = "day_16_2"
path = "src/day_16_2/main.rs"

[[bin]]
name = "day_17_1"
path = "src/day_17_1/main.rs"

[[bin]]
name = "day_17_2"
path = "src/day_17_2/main.rs"

[[bin]]
name = "day_18_1"
path = "src/day_18_1/main.rs"

[[bin]]
name = "day_18_2"
path = "src/day_18_2/main.rs"

[[bin]]
name = "day_19_1"
path = "src/day_19_1/main.rs"

[[bin]]
name = "day_19_2"
path = "src/day_19_2/main.rs"

[[bin]]
name = "day_20_1"
path = "src/day_20_1/main.rs"

[[bin]]
name = "day_20_2"
path = "src/day_20_2/main.rs"
